Add no patched fonts option

--- a/tmux.conf
+++ b/tmux.conf
@@ -46,6 +46,9 @@ set -g @plugin 'catppuccin/tmux'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
+# Misc settings
+set -g @catppuccin_no_patched_fonts_theme_enabled on
+
 # automatic installation (if not already installed)
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
