Add datetime display

--- a/tmux.conf
+++ b/tmux.conf
@@ -48,6 +48,7 @@ set -g @plugin 'catppuccin/tmux'
 
 # Misc settings
 set -g @catppuccin_no_patched_fonts_theme_enabled on
+set -g @catppuccin_date_time "%Y-%m-%d %H:%M"
 
 # automatic installation (if not already installed)
 if "test ! -d ~/.tmux/plugins/tpm" \
