--- a/tmux.conf
+++ b/tmux.conf
@@ -21,10 +21,10 @@ set-option -g renumber-windows on
 
 # vim bindings for scrolling and pane movement
 # set-window-option -g mode-keys vi
-# bind h select-pane -L
-# bind j select-pane -D
-# bind k select-pane -U
-# bind l select-pane -R
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # Create new windows/tabs at current path
 bind  c  new-window      -c "#{pane_current_path}"
@@ -37,7 +37,8 @@ bind '"' split-window -v -c "#{pane_current_path}"
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
+# disabled because I use ctrl-l (l as in lever) for clearing line
+# set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux'
 
 # Other examples:
