--- a/tmux.conf
+++ b/tmux.conf
@@ -1,10 +1,11 @@
 # Set terminal to 24-bit color
 set-option -sa terminal-overrides ",xterm*:Tc"
 
-# Set prefix to C-Space (instead of C-b)
-# unbind C-b
-# set -g prefix C-Space
-# bind C-Space send-prefix
+# Set prefix to C-a (instead of C-b)
+unbind C-b
+set -g prefix C-a
+# bind C-a send-prefix
+bind a send-prefix
 
 # enable mouse
 setw -g mouse on
