Add neovim optimizations

--- a/tmux.conf
+++ b/tmux.conf
@@ -52,6 +52,11 @@ set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_no_patched_fonts_theme_enabled on
 set -g @catppuccin_date_time "%Y-%m-%d %H:%M"
 
+# neovim escape time too high
+set-option -sg escape-time 10
+# "focus-events" is not enabled, autoread may not work (from neovim)
+set-option -g focus-events on
+
 # automatic installation (if not already installed)
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
